--- a/resources/assets/sass/atoms/_typography.scss
+++ b/resources/assets/sass/atoms/_typography.scss
@@ -97,3 +97,8 @@ blockquote {
   color: $brand-primary;
   font-size: 22px;
 }
+
+.text-title {
+  display: block;
+  max-width: 90%;
+}
